<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_alignParentTop="true"
        app:title="Donor registration"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/toolbar"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewDonorEmail"
            style="@style/METStyle"
            android:hint="@string/email_id_hint"
            android:inputType="textEmailAddress" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewDonorPassword"
            style="@style/METStyle"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        >

        <Button
            android:id="@+id/btnDonorRegister"
            style="@style/ButtonStyle"
            android:text="@string/registerbutton"
            />
    </LinearLayout>

</RelativeLayout>