<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFundRaise"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/app_normal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivNGOPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/app_normal_margin"
            android:contentDescription="@string/ngo_name_hint"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            style="@style/MyText"
            tools:text="Need money for poor student in xyz school" />


    </LinearLayout>

    <ImageView
        android:layout_marginTop="@dimen/app_small_margin"
        android:id="@+id/imgFundPhoto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/animal"
        android:scaleType="centerCrop"
        />
    <TextView
        android:maxLines="5"
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#333333"
        style="@style/METStyle"
        tools:text="@tools:sample/lorem/random"
        />

    <LinearLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvAmountTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/app_small_margin"
            android:text="@string/fund_amout"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="13dp"
             />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/app_small_margin"
            android:text="@string/fund_amout"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnDonate"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/donate_button" />
    </LinearLayout>

    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#666666"/>
</LinearLayout>